scrollbar fixed

--- a/src/components/landingPage/home/home.css
+++ b/src/components/landingPage/home/home.css
@@ -100,3 +100,7 @@
 .contactP{
     font-size:x-large
 }
+
+html {
+    scroll-behavior: smooth;
+  }
